--- a/templates/login.html
+++ b/templates/login.html
@@ -13,13 +13,13 @@
         </div>
         </div>
     <div class="login-container">
-        <h1>Login</h1>
+        <h1>Login</h1><br>
         <form method="POST">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required><br>
-            <button type="submit">Login</button>
+            <label for="username">Username:</label><br>
+            <input type="text" id="username" name="username" required><br><br>
+            <label for="password">Password:</label><br>
+            <input type="password" id="password" name="password" required><br><br>
+            <button type="submit">Login</button><br><br><br>
         </form>
         {% with messages = get_flashed_messages() %}
         {% if messages %}
