--- a/static/style.css
+++ b/static/style.css
@@ -72,7 +72,7 @@ body {
     margin-top: 50px;
     color: #ccc;
     width: 40%;
-    background-color: #151515bf;
+    background-color: #151515ca;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
@@ -81,12 +81,15 @@ body {
 
 label {
     display: block;
+
     margin: 10px 0 5px;
     font-weight:bolder;
+    font-size: larger;
 }
 
 input[type="text"] {
-    width: 90%;
+    width: 80%;
+    font-size: larger;
     background-color: #b0f1fa;
     padding: 10px;
     margin-bottom: 20px;
@@ -96,8 +99,10 @@ input[type="text"] {
 
 button {
     padding: 10px 20px;
+    font-size: larger;
     background-color: #007bff;
     color: white;
+    font-weight: bold;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -109,10 +114,12 @@ button:hover {
 
 .error {
     color: red;
+    font-size: x-large;
     margin-top: 10px;
 }
 .message {
 
     color: rgb(0, 255, 89);
     margin-top: 10px;
+    font-size: x-large;
 }
